@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-09-21T12:29:19Z",
-  "count_outdated" : 4461,
-  "uniques_outdated" : 2211,
-  "count" : 4487,
-  "uniques" : 2237,
+  "timestamp" : "2024-09-22T12:29:54Z",
+  "count_outdated" : 4462,
+  "uniques_outdated" : 2212,
+  "count" : 4490,
+  "uniques" : 2240,
   "clones" : [
-    {
-      "timestamp": "2024-09-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-09-09T00:00:00Z",
       "count": 3,
@@ -112,6 +103,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-09-22T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
