@@ -1,12 +1,7 @@
 {
-  "count": 26,
-  "uniques": 22,
+  "count": 28,
+  "uniques": 25,
   "clones": [
-    {
-      "timestamp": "2024-09-08T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-09-09T00:00:00Z",
       "count": 3,
@@ -61,6 +56,11 @@
       "timestamp": "2024-09-21T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2024-09-22T00:00:00Z",
+      "count": 3,
+      "uniques": 3
     }
   ]
 }
