@@ -1,3 +1,12 @@
+2024-09-22T12:29:54Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10981145975 # 543
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-22
+* notice: last 14d: unq all: 25 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 2211 4461 / 2237 4487
+* notice: next accum: outdated-unq outdated-all / unq all: 2212 4462 / 2240 4490
+* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -0 -0 / +3 +3 -0 -0 / 3 3
+* notice: removed / changed dates: [2024-09-08] / [2024-09-22]
+
 2024-09-21T12:29:19Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10972569342 # 541
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-21
